test/langtools/tools/javac/valhalla/primitive-classes/PrimitiveAsTypeName.out
- compiler.warn.source.no.system.modules.path: 16
PrimitiveAsTypeName.java:12:24: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.primitive.classes), 16, 19
1 error
1 warning
